# pentomino

./: Cargo.toml  README.md
.github/workflows/: rust.yml
pentomino-solver/: Cargo.toml
pentomino-solver-cli/: Cargo.toml  README.md
pentomino-solver-wasm/: Cargo.toml  build.sh
pentomino-solver-wasm/src/: lib.rs
pentomino-solver/benches/: benchmark.rs
pentomino-solver/src/: bitboard.rs  lib.rs  pieces.rs  shapes.rs  solvers.rs
pentomino-solver/src/solvers/: default.rs  optimized.rs  simple.rs
pentomino-solver/src/solvers/optimized/: strategy.rs
