[package]
name = "pentomino-solver-cli"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
colored = "2.0.4"
pentomino-solver = { path = "../pentomino-solver" }
supports-color = "2.0.0"
