[package]
name = "pentomino-solver-wasm"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pentomino-solver = { path = "../pentomino-solver" }
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
