[package]
name = "pentomino-solver"
version = "0.1.0"
authors = ["sugyan <sugi1982@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
num-traits = "0.2"
num-derive = "0.4"
